--- a/environment.yml
+++ b/environment.yml
@@ -41,6 +41,7 @@ dependencies:
       - debugpy==1.8.0
       - decorator==5.1.1
       - defusedxml==0.7.1
+      - et-xmlfile==1.1.0
       - exceptiongroup==1.2.0
       - executing==2.0.1
       - fastjsonschema==2.19.1
@@ -55,9 +56,10 @@ dependencies:
       - isoduration==20.11.0
       - jedi==0.19.1
       - jinja2==3.1.3
+      - joblib==1.3.2
       - json5==0.9.14
       - jsonpointer==2.4
-      - jsonschema==4.21.1
+      - jsonschema==4.21.0
       - jsonschema-specifications==2023.12.1
       - jupyter==1.0.0
       - jupyter-client==8.6.0
@@ -67,33 +69,35 @@ dependencies:
       - jupyter-lsp==2.2.2
       - jupyter-server==2.12.5
       - jupyter-server-terminals==0.5.1
-      - jupyterlab==4.0.11
+      - jupyterlab==4.0.10
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.25.2
       - jupyterlab-widgets==3.0.9
       - kiwisolver==1.4.5
-      - markupsafe==2.1.4
+      - markupsafe==2.1.3
       - matplotlib==3.8.2
       - matplotlib-inline==0.1.6
+      - memory-profiler==0.61.0
       - mistune==3.0.2
       - nbclient==0.9.0
       - nbconvert==7.14.2
       - nbformat==5.9.2
       - nest-asyncio==1.5.9
-      - notebook==7.0.7
+      - notebook==7.0.6
       - notebook-shim==0.2.3
       - numpy==1.26.3
-      - overrides==7.6.0
+      - openpyxl==3.1.2
+      - overrides==7.4.0
       - packaging==23.2
       - pandas==2.1.4
-      - pandocfilters==1.5.1
+      - pandocfilters==1.5.0
       - parso==0.8.3
       - pexpect==4.9.0
       - pillow==10.2.0
       - platformdirs==4.1.0
       - prometheus-client==0.19.0
       - prompt-toolkit==3.0.43
-      - psutil==5.9.8
+      - psutil==5.9.7
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
       - pycparser==2.21
@@ -112,7 +116,8 @@ dependencies:
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rpds-py==0.17.1
-      - scipy==1.12.0
+      - scikit-learn==1.4.0
+      - scipy==1.11.4
       - seaborn==0.13.1
       - send2trash==1.8.2
       - six==1.16.0
@@ -120,6 +125,7 @@ dependencies:
       - soupsieve==2.5
       - stack-data==0.6.3
       - terminado==0.18.0
+      - threadpoolctl==3.2.0
       - tinycss2==1.2.1
       - tomli==2.0.1
       - tornado==6.4
@@ -136,5 +142,6 @@ dependencies:
       - webencodings==0.5.1
       - websocket-client==1.7.0
       - widgetsnbextension==4.0.9
+      - xgboost==2.0.3
       - zipp==3.17.0
 prefix: /home/jinhyun/anaconda3/envs/py39
