--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,7 @@ dependencies:
   - xz=5.4.5=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
+      - alembic==1.13.1
       - anyio==4.2.0
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
@@ -35,6 +36,7 @@ dependencies:
       - certifi==2023.11.17
       - cffi==1.16.0
       - charset-normalizer==3.3.2
+      - colorlog==6.8.2
       - comm==0.2.1
       - contourpy==1.2.0
       - cycler==0.12.1
@@ -47,6 +49,7 @@ dependencies:
       - fastjsonschema==2.19.1
       - fonttools==4.47.2
       - fqdn==1.5.1
+      - greenlet==3.0.3
       - idna==3.6
       - importlib-metadata==7.0.1
       - importlib-resources==6.1.1
@@ -74,6 +77,7 @@ dependencies:
       - jupyterlab-server==2.25.2
       - jupyterlab-widgets==3.0.9
       - kiwisolver==1.4.5
+      - mako==1.3.3
       - markupsafe==2.1.3
       - matplotlib==3.8.2
       - matplotlib-inline==0.1.6
@@ -87,6 +91,7 @@ dependencies:
       - notebook-shim==0.2.3
       - numpy==1.26.3
       - openpyxl==3.1.2
+      - optuna==3.6.1
       - overrides==7.4.0
       - packaging==23.2
       - pandas==2.1.4
@@ -123,6 +128,7 @@ dependencies:
       - six==1.16.0
       - sniffio==1.3.0
       - soupsieve==2.5
+      - sqlalchemy==2.0.29
       - stack-data==0.6.3
       - terminado==0.18.0
       - threadpoolctl==3.2.0
