--- a/environment_py.yml
+++ b/environment_py.yml
@@ -33,6 +33,7 @@ dependencies:
       - babel==2.14.0
       - beautifulsoup4==4.12.3
       - bleach==6.1.0
+      - cartopy==0.23.0
       - certifi==2023.11.17
       - cffi==1.16.0
       - charset-normalizer==3.3.2
@@ -108,7 +109,9 @@ dependencies:
       - pycparser==2.21
       - pygments==2.17.2
       - pyparsing==3.1.1
+      - pyproj==3.6.1
       - pysam==0.22.0
+      - pyshp==2.3.1
       - python-dateutil==2.8.2
       - python-json-logger==2.0.7
       - pytz==2023.3.post1
@@ -125,6 +128,7 @@ dependencies:
       - scipy==1.11.4
       - seaborn==0.13.1
       - send2trash==1.8.2
+      - shapely==2.0.4
       - six==1.16.0
       - sniffio==1.3.0
       - soupsieve==2.5
